# repo-release-tools

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .run_in_terminal  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  action.yml  context7.json  cpm.toml  lefthook.yml  pyproject.toml  tmp_icon_block.txt
.claude/: coverage-baseline.json  launch.json  settings.json
.claude/agents/: copilot-review-triage.agent.md  coverage-rescuer.agent.md  hook-instruction-auditor.agent.md
.claude/hooks/: README.md  check_push_coverage.py  completeness_guard.py  coverage_non_regression.py  drift_guard.py  refresh_coverage_baseline.py  rrt_ux_guard.py  rrt_ux_write_guard.py
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: artifact-router.agent.md  prompt-strategist.agent.md  rrt-user-bootstrap.agent.md  rrt-user-branch-guard.agent.md  rrt-user-changelog-curator.agent.md  rrt-user-ci-failure-triage.agent.md  rrt-user-commit-lint-triage.agent.md  rrt-user-config-validator.agent.md  rrt-user-docs-sync-auditor.agent.md  rrt-user-release-readiness.agent.md  rrt-user-upgrade-assistant.agent.md  rrt-user-version-planner.agent.md  universal-explore.agent.md  universal-plan.agent.md  validation-reviewer.agent.md
.github/hooks/: check_push_coverage.py  coverage-protection.json  rrt-ux-design.json  rrt_user_branch_policy.py  rrt_user_changelog_policy.py  rrt_user_ci_local_preflight.py  rrt_user_commit_policy.py  rrt_user_config_sanity.py  rrt_user_dirty_tree_guard.py  rrt_user_docs_sync_hint.py  rrt_user_release_readiness.py  rrt_user_security_hygiene_hint.py  rrt_user_version_drift_guard.py  rrt_ux_guard.py  rrt_ux_write_guard.py
.github/instructions/: coverage-tests.instructions.md  repo-release-tools.instructions.md  self-correction.instructions.md  tox-uv.instructions.md
.github/workflows/: cicd.yml  claude-code-review.yml  claude.yml  hook-runners.yml  hybrid-runtime.yml  pages.yml
.rrt/: artifacts.lock.toml  docs.lock.toml  drift.lock.toml  health.lock.toml  tree.lock.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
actions/publish-snapshot/: action.yml
analysis/the/: ARCHITECTURE.mmd  ASSESSMENT.md  BUSINESS_RULES.md  DATA_OBJECTS.md  MODERNIZATION_BRIEF.md  P1_LATENCY_BASELINE.md  PHASE4_SCOPE.md  TOPOLOGY.html  call-graph.mmd  critical-path.mmd  data-lineage.mmd  extract_topology.py  render_business_rules.py  topology.json
docs/: Gemfile  _config.yml  action.md  agent-instructions.md  astro.config.mjs  branch.md  doctor.md  eol.md  git-magic.md  git.md  github-action.md  hooks.md  index.md  mcp-server.md  package-lock.json  package.json  pre-commit.md  rrt-cli.md  rrt-config-reference.toml  semantic-branches.md  skill.md
docs/_includes/: custom-head.html
docs/_layouts/: default.html
docs/commands/: branch.md  bump.md  ci-automation.md  ci_version.md  config_cmd.md  doctor.md  drift.md  env_cmd.md  eol_check.md  folder.md  git-workflow.md  git_cmd.md  hooks.md  init.md  install.md  repo-health.md  rrt-cli.md  setup-tooling.md  skill.md  toc.md  tree.md  version-release.md
evals/: evals-2.json  evals.json
issues/: alternative-configuration-support.md
scripts/: check_no_raw_prints.py  generate_cli_docs.py  generate_mcp_json.py  regen_badges.py  sync_simple_icons.py
scripts/templates/: doc-footer.md
src/repo_release_tools/: __init__.py  __main__.py  action.py  changelog.py  cli.py  config.py  docs_extractor.py  docs_formats.py  docs_publisher.py  eol.py  git.py  glyphs.py  hooks.py  output.py  preflight.py  skill_assets.py  state.py  version_targets.py  versioning.py
tests/: conftest.py  test_agents_family_install.py  test_banner.py  test_banner_extra.py  test_branch.py  test_bump.py  test_changelog.py  test_ci_version.py  test_cli.py  test_commands_docstrings.py  test_config.py  test_config_cmd.py  test_docs_cmd.py  test_docs_extractor.py  test_docs_formats.py  test_doctor.py  test_env_cmd.py  test_eol.py  test_eol_check.py  test_extras.py  test_folder_cmd_extra.py  test_generate_cli_docs.py  test_git_cmd.py  test_git_helpers.py  test_glyphs.py  test_glyphs_cmd.py  test_hooks.py  test_hooks_top.py  test_init.py  test_markdown_utils.py  test_output.py  test_platform.py  test_preflight.py  test_runtime_hybrid.py  test_skill.py  test_state.py  test_syntax_extra.py  test_toc.py  test_tree.py  test_ui_color.py  (+9 more)
tests/claude_hooks/: test_coverage_hooks.py
tests/commands/: test_action_cmd.py  test_agents_cmd.py  test_agents_family_install.py  test_apply_version.py  test_artifacts_cmd.py  test_branch.py  test_bump.py  test_changelog_compare.py  test_changelog_lint.py  test_ci_version.py  test_commands_docstrings.py  test_config_cmd.py  test_docs_api.py  test_docs_api_extra.py  test_docs_cmd.py  test_docs_map.py  test_docs_map_cli.py  test_docs_map_lock.py  test_docs_suggest.py  test_doctor.py  test_drift_cmd.py  test_env_cmd.py  test_eol_check.py  test_fields_cmd.py  test_folder_cmd.py  test_folder_cmd_extra.py  test_git_backport.py  test_git_cmd.py  test_git_commit.py  test_git_inspect.py  test_git_sync.py  test_hooks_cmd.py  test_init.py  test_install_cmd.py  test_mcp_scaffold.py  test_platform.py  test_project_cmd.py  test_release_cmd.py  test_release_notes.py  test_release_repair.py  (+10 more)
tests/config/: test_reference.py
tests/core/: test_changelog.py  test_cli.py  test_config.py  test_generated_asset_model.py  test_generated_assets_core.py  test_integration_assets.py  test_platform_registry.py  test_project_metadata.py  test_state.py  test_state_exceptions.py  test_state_extra.py  test_state_lock_diagnostics.py  test_state_more.py
tests/docs/: test_docs_extractor.py  test_docs_formats.py  test_generate_cli_docs.py  test_markdown_utils.py
tests/e2e/: conftest.py  harness.py  test_destructive_gates.py  test_harness_smoke.py  test_mcp_parity_and_ordering.py  test_policy_hooks_action.py  test_release_flow.py
tests/eol/: test_eol.py
tests/folders/: test_folders_config_extra.py  (+1 more)
tmp_test_dir/: tree.lock.toml
(+268 files in other folders)
