[project]
name = "repo-release-tools"
version = "1.1.0"
description = "Config-driven branch and release helpers for Git repositories"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anselm Hahn" }]
requires-python = ">=3.12"
keywords = ["git", "release", "branch", "versioning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Anselmoo/repo-release-tools"
Issues = "https://github.com/Anselmoo/repo-release-tools/issues"
Source = "https://github.com/Anselmoo/repo-release-tools"

[project.scripts]
repo-release-tools = "repo_release_tools.cli:main"
rrt = "repo_release_tools.cli:main"
rrt-hooks = "repo_release_tools.hooks:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.0",
    "ty>=0.0.26",
]

[tool.poe.groups.docs]
heading = "Documentation"

[tool.poe.groups.docs.tasks.docs-generate]
help = "Regenerate the CLI reference and topic docs from source."
script = "generate_cli_docs:task_generate"
env.PYTHONPATH = "scripts"

[tool.poe.groups.docs.tasks.docs-check]
help = "Verify all generated docs match their source-owned content."
script = "generate_cli_docs:task_check"
env.PYTHONPATH = "scripts"

[tool.poe.groups.docs.tasks.docs]
help = "Regenerate generated docs and confirm they are current."
sequence = ["docs-generate", "docs-check"]

[tool.rrt]

[[tool.rrt.version_targets]]
path = "pyproject.toml"
kind = "pep621"

[[tool.rrt.version_targets]]
path = "src/repo_release_tools/__init__.py"
kind = "python_version"

[[tool.rrt.pin_targets]]
path = "docs/action.md"
pattern = '(Anselmoo/repo-release-tools@v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "docs/hooks.md"
pattern = '(rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "docs/agent-instructions.md"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "README.md"
pattern = '(Anselmoo/repo-release-tools@v)(\d+\.\d+\.\d+)()'

[tool.rrt.eol]
languages = ["python"]
warn_days = 180
error_days = 0

[[tool.rrt.eol.overrides]]
language = "python"
cycle = "3.12"
eol = "2026-12-31"

[tool.ruff]
line-length = 100
target-version = "py312"
output-format = "full"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "D"]
# D203 (one-blank-line-before-class) conflicts with D211 (no-blank-line-before-class)
# D213 (multi-line-summary-second-line) conflicts with D212 (multi-line-summary-first-line)
# ANN401 disallows 'Any' but we legitimately use it in UI/hook APIs
ignore = ["D203", "D213", "ANN401", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test files: no docstring rules; allow assert and private member access
"tests/**/*.py" = ["D"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
output-format = "full"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-import = "error"
missing-argument = "error"
invalid-return-type = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/repo_release_tools",
    "--cov-report=xml",
    "--cov-report=term-missing",
]
markers = ["runtime: end-to-end runtime/toolchain integration tests"]

[tool.coverage.run]
source = ["src/repo_release_tools"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["3.12", "3.13", "3.14"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "-q", "-m", "not runtime", "{posargs}"]]
