[project]
name = "repo-release-tools"
version = "1.4.0"
description = "Config-driven branch and release helpers for Git repositories"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anselm Hahn" }]
requires-python = ">=3.12"
keywords = ["git", "release", "branch", "versioning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Anselmoo/repo-release-tools"
Issues = "https://github.com/Anselmoo/repo-release-tools/issues"
Source = "https://github.com/Anselmoo/repo-release-tools"

[project.scripts]
repo-release-tools = "repo_release_tools.cli:main"
rrt = "repo_release_tools.cli:main"
rrt-hooks = "repo_release_tools.workflow.hooks:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.0",
    "ty>=0.0.26",
]

[tool.poe.groups.docs]
heading = "Documentation"

[tool.poe.groups.docs.tasks.docs-generate]
help = "Regenerate the CLI reference and topic docs from source."
cmd = "rrt docs publish"

[tool.poe.groups.docs.tasks.docs-inject]
help = "Inject shared anchor blocks (headers/footers) into doc files."
cmd = "rrt docs inject"

[tool.poe.groups.docs.tasks.docs-inject-check]
help = "Verify all shared anchor blocks are up to date."
cmd = "rrt docs inject --check"

[tool.poe.groups.docs.tasks.docs-check]
help = "Verify all generated docs match their source-owned content."
cmd = "rrt docs publish --check"

[tool.poe.groups.docs.tasks.docs]
help = "Regenerate generated docs and confirm they are current."
sequence = ["docs-generate", "docs-inject", "docs-check", "docs-inject-check"]

[tool.rrt]

[[tool.rrt.version_targets]]
path = "pyproject.toml"
kind = "pep621"

[[tool.rrt.version_targets]]
path = "src/repo_release_tools/__init__.py"
kind = "python_version"

[[tool.rrt.pin_targets]]
path = "docs/action.md"
pattern = '(Anselmoo/repo-release-tools@v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "docs/commands/hooks.md"
pattern = '(rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "docs/agent-instructions.md"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "README.md"
pattern = '(Anselmoo/repo-release-tools@v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "src/repo_release_tools/hooks.py"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "src/repo_release_tools/workflow/hooks.py"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "src/repo_release_tools/integrations/action.py"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = "src/repo_release_tools/integrations/skill_assets.py"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = ".github/skills/**/SKILL.md"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[[tool.rrt.pin_targets]]
path = ".github/skills/**/outputs/answer.md"
pattern = '(Anselmoo/repo-release-tools@v|rev: v)(\d+\.\d+\.\d+)()'

[tool.rrt.folders]

[[tool.rrt.folders.templates]]
name = "tests-root"
description = "tests/ root: only conftest.py plus the nine logical subdirs"
strictness = "strict"
exact = false
required_files = ["conftest.py"]
required_dirs = [
    "commands",
    "core",
    "docs",
    "eol",
    "folders",
    "hooks",
    "integration",
    "ui",
    "version",
    "workflow",
]

[[tool.rrt.folders.templates]]
name = "tests-commands"
description = "One test file per rrt subcommand"
strictness = "loose"
exact = false
required_files = [
    "test_branch.py",
    "test_bump.py",
    "test_ci_version.py",
    "test_config_cmd.py",
    "test_docs_cmd.py",
    "test_doctor.py",
    "test_env_cmd.py",
    "test_eol_check.py",
    "test_folder_cmd.py",
    "test_folder_cmd_extra.py",
    "test_git_cmd.py",
    "test_init.py",
    "test_release_cmd.py",
    "test_skill.py",
    "test_toc.py",
    "test_tree.py",
]

[[tool.rrt.folders.templates]]
name = "tests-core"
description = "Root-level module tests: changelog, cli, config loading, state"
strictness = "strict"
exact = true
required_files = [
    "test_changelog.py",
    "test_cli.py",
    "test_config.py",
    "test_state.py",
]

[[tool.rrt.folders.templates]]
name = "tests-docs"
description = "Docs subsystem tests"
strictness = "strict"
exact = true
required_files = [
    "test_docs_extractor.py",
    "test_docs_formats.py",
    "test_generate_cli_docs.py",
    "test_markdown_utils.py",
]

[[tool.rrt.folders.templates]]
name = "tests-eol"
description = "End-of-life module tests"
strictness = "loose"
exact = false
required_files = ["test_eol.py"]

[[tool.rrt.folders.templates]]
name = "tests-folders"
description = "Folders module tests"
strictness = "strict"
exact = true
required_files = ["test_folders_config_extra.py", "test_folders_core_extra.py"]

[[tool.rrt.folders.templates]]
name = "tests-hooks"
description = "Hook runner tests"
strictness = "strict"
exact = true
required_files = ["test_hooks.py", "test_hooks_top.py"]

[[tool.rrt.folders.templates]]
name = "tests-integration"
description = "Real-subprocess e2e tests (@pytest.mark.runtime)"
strictness = "loose"
exact = false
required_files = ["test_runtime_hybrid.py"]

[[tool.rrt.folders.templates]]
name = "tests-ui"
description = "UI rendering layer tests"
strictness = "strict"
exact = true
required_files = [
    "test_glyphs.py",
    "test_output.py",
    "test_syntax_extra.py",
    "test_ui_color.py",
    "test_ui_font.py",
    "test_ui_init.py",
    "test_ui_layout.py",
    "test_ui_messaging.py",
    "test_ui_progress.py",
    "test_ui_prompt.py",
    "test_ui_syntax.py",
    "test_user_experience_simulator.py",
]

[[tool.rrt.folders.templates]]
name = "tests-version"
description = "Versioning module tests"
strictness = "strict"
exact = true
required_files = ["test_version_targets.py", "test_versioning.py"]

[[tool.rrt.folders.templates]]
name = "tests-workflow"
description = "Workflow / low-level git helper tests"
strictness = "loose"
exact = false
required_files = ["test_git_helpers.py"]

[[tool.rrt.folders.rules]]
name = "tests-root-rule"
selector = "tests"
templates = ["tests-root"]

[[tool.rrt.folders.rules]]
name = "tests-commands-rule"
selector = "tests/commands"
templates = ["tests-commands"]

[[tool.rrt.folders.rules]]
name = "tests-core-rule"
selector = "tests/core"
templates = ["tests-core"]

[[tool.rrt.folders.rules]]
name = "tests-docs-rule"
selector = "tests/docs"
templates = ["tests-docs"]

[[tool.rrt.folders.rules]]
name = "tests-eol-rule"
selector = "tests/eol"
templates = ["tests-eol"]

[[tool.rrt.folders.rules]]
name = "tests-folders-rule"
selector = "tests/folders"
templates = ["tests-folders"]

[[tool.rrt.folders.rules]]
name = "tests-hooks-rule"
selector = "tests/hooks"
templates = ["tests-hooks"]

[[tool.rrt.folders.rules]]
name = "tests-integration-rule"
selector = "tests/integration"
templates = ["tests-integration"]

[[tool.rrt.folders.rules]]
name = "tests-ui-rule"
selector = "tests/ui"
templates = ["tests-ui"]

[[tool.rrt.folders.rules]]
name = "tests-version-rule"
selector = "tests/version"
templates = ["tests-version"]

[[tool.rrt.folders.rules]]
name = "tests-workflow-rule"
selector = "tests/workflow"
templates = ["tests-workflow"]

[tool.rrt.eol]
languages = ["python"]
warn_days = 180
error_days = 0

[tool.rrt.docs]
mirror_src_tree = true
docs_dir = "docs"
src_dir = "src/repo_release_tools"

# Source-link settings used by docs exporters to build file/line URLs.
source_repo_url = "https://github.com/Anselmoo/repo-release-tools"
source_ref = "main"
source_url_template = "{repo_url}/blob/{ref}/{path}#L{line}"
stubs = [
    "commands/bump",
    "commands/ci_version",
    "commands/config_cmd",
    "commands/env_cmd",
    "commands/init",
]

# Shared-block anchor id used by injected doc footer content.
[[tool.rrt.docs.shared_blocks]]
anchor_id = "doc-footer"
content = """
---

[↑ Docs index](https://github.com/Anselmoo/repo-release-tools/blob/main/docs/index.md) · [CLI reference](https://github.com/Anselmoo/repo-release-tools/blob/main/docs/commands/rrt-cli.md) · [Changelog](https://github.com/Anselmoo/repo-release-tools/blob/main/CHANGELOG.md) · [GitHub]({repo_url})
"""
targets = [
    "docs/index.md",
    "docs/commands/bump.md",
    "docs/commands/ci_version.md",
    "docs/commands/config_cmd.md",
    "docs/commands/env_cmd.md",
    "docs/commands/init.md",
    "docs/commands/toc.md",
]

[[tool.rrt.eol.overrides]]
language = "python"
cycle = "3.12"
eol = "2026-12-31"

[tool.ruff]
line-length = 100
target-version = "py312"
output-format = "full"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "D"]
# D203 (one-blank-line-before-class) conflicts with D211 (no-blank-line-before-class)
# D213 (multi-line-summary-second-line) conflicts with D212 (multi-line-summary-first-line)
# ANN401 disallows 'Any' but we legitimately use it in UI/hook APIs
ignore = ["D203", "D213", "ANN401", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test files: no docstring rules; allow assert and private member access
"tests/**/*.py" = ["D"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
output-format = "full"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-import = "error"
missing-argument = "error"
invalid-return-type = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/repo_release_tools",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
markers = ["runtime: end-to-end runtime/toolchain integration tests"]

[tool.coverage.run]
source = ["src/repo_release_tools"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["3.12", "3.13", "3.14"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "-q", "-m", "not runtime", "{posargs}"]]
